# houndify-sdk-rust

./: Cargo.toml  README.md  whattimeisit.m4a
src/: client.rs  error.rs  lib.rs  query.rs  response.rs
tests/: client.rs  houndify.rs  sample_result.json
