[package]
name = "houndify"
version = "0.3.2"
authors = ["Kevin Jing Qiu <kevin@idempotent.ca>"]
edition = "2018"
description = "Houndify SDK in Rust"
license = "MIT"
homepage = "http://houndify-sdk-rust.github.io"
repository = "https://github.com/kevinjqiu/houndify-sdk-rust"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
url = "2.1.1"
base64 = "0.11.0"
hmac = "0.7.1"
sha2 = "0.8.1"
serde =  { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
uuid = { version = "0.8", features = ["v4"] }
